<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>io.zerows</groupId>
        <artifactId>rachel-momo-0216</artifactId>
        <version>1.0.6</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <artifactId>r2mo-rapid</artifactId>
    <version>1.0-M19</version>
    <name>R2MO::🧬 - ${r2mo.version} / 🧪 - Rachel Momo ${rachel-momo.version}</name>
    <!-- License -->
    <url>https://gitee.com/silentbalanceyh/r2mo-rapid</url>
    <description>
        R2MO Rapid Framework for Delivery
    </description>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
            <comments>The project itself is licensed under MIT License.</comments>
        </license>
    </licenses>
    <!-- Developers -->
    <developers>
        <developer>
            <name>lang.yu</name>
            <email>silentbalanceyh@126.com</email>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>+8</timezone>
        </developer>
    </developers>
    <!-- Scm Connection -->
    <scm>
        <connection>scm:git:https://gitee.com/silentbalanceyh/r2mo-rapid.git</connection>
        <developerConnection>scm:git:https://gitee.com/silentbalanceyh</developerConnection>
        <url>https://www.zerows.io</url>
        <tag>v${project.version}</tag>
    </scm>
    <!-- Distribution -->
    <distributionManagement>
        <snapshotRepository>
            <id>oss</id>
            <name>Maven Central Snapshots Repository</name>
            <url>https://central.sonatype.com</url>
        </snapshotRepository>
        <repository>
            <id>oss</id>
            <name>Maven Central Staging Repository</name>
            <url>https://central.sonatype.com</url>
        </repository>
    </distributionManagement>
    <modules>
        <module>r2mo-ams</module>

        <!-- 🌷 加密解密核心 -->
        <module>r2mo-jce</module>

        <!-- 🌷 数据类型实现 -->
        <module>r2mo-typed-hutool</module>
        <module>r2mo-typed-vertx</module>

        <!-- 🌷 IO 详细实现 -->
        <module>r2mo-io</module>
        <module>r2mo-io-local</module>

        <!-- 🌷 Database Engine 实现 -->
        <module>r2mo-dbe</module>
        <module>r2mo-dbe-mybatisplus</module>

        <!-- 🌷 Spring 模块专用 -->
        <module>r2mo-spring</module>
        <module>r2mo-spring-mybatisplus</module>
        <module>r2mo-spring-json</module>
        <module>r2mo-spring-excel</module>
        <module>r2mo-spring-junit5</module>

        <!-- 🌷 Vertx 模块专用 -->
        <module>r2mo-vertx</module>
        <module>r2mo-vertx-junit5</module>

        <!-- ☘️ Bootstrap 启动依赖处理 / 无实现，只有抽象层，即使有实现走 SPI 模式-->
        <module>r2mo-boot-spring</module>
        <module>r2mo-boot-vertx</module>
    </modules>
    <properties>
        <rachel-momo.version>1.0.6</rachel-momo.version>
        <r2mo.version>1.0-M19</r2mo.version>
        <!-- 项目版本依旧需要设置 -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <java.version>17</java.version>
    </properties>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${java.version}</release>
                    <compilerArgs>
                        <arg>-Xlint:-options</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <additionalOptions>
                        <additionalOption>-Xdoclint:none</additionalOption>
                    </additionalOptions>
                    <failOnError>false</failOnError>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- Source -->
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-gpg-plugin</artifactId>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                        <configuration>
                            <passphraseServerId>oss</passphraseServerId>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.8.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>oss</publishingServerId>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.zerows</groupId>
                <artifactId>r2mo-boot-spring</artifactId>
                <version>${r2mo.version}</version>
            </dependency>
            <dependency>
                <groupId>io.zerows</groupId>
                <artifactId>r2mo-boot-vertx</artifactId>
                <version>${r2mo.version}</version>
            </dependency>
            <!-- 统一抽象接口 -->
            <dependency>
                <groupId>io.zerows</groupId>
                <artifactId>r2mo-ams</artifactId>
                <version>${r2mo.version}</version>
            </dependency>
            <dependency>
                <groupId>io.zerows</groupId>
                <artifactId>r2mo-dbe</artifactId>
                <version>${r2mo.version}</version>
            </dependency>
            <dependency>
                <groupId>io.zerows</groupId>
                <artifactId>r2mo-jce</artifactId>
                <version>${r2mo.version}</version>
            </dependency>
            <dependency>
                <groupId>io.zerows</groupId>
                <artifactId>r2mo-io</artifactId>
                <version>${r2mo.version}</version>
            </dependency>
            <!-- 容器上层自选 -->
            <dependency>
                <groupId>io.zerows</groupId>
                <artifactId>r2mo-spring</artifactId>
                <version>${r2mo.version}</version>
            </dependency>
            <dependency>
                <groupId>io.zerows</groupId>
                <artifactId>r2mo-vertx-doc</artifactId>
                <version>${r2mo.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <packaging>pom</packaging>
</project>